Closes #1409 RTL: Fixed ColorPicker dropdown menu & alignment of Telerik grid header

--- a/src/Presentation/SmartStore.Web/Administration/Content/_rtl.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/_rtl.scss
@@ -235,6 +235,10 @@
 		}
 	}
 
+	.t-grid-header .t-header {
+		text-align: right;
+	}
+
 	.t-grid-edit-row .t-numerictextbox {
 		.t-input {
 			padding-right: 0.5rem !important;
